--- a/templates/usuarios/login.html
+++ b/templates/usuarios/login.html
@@ -1,1 +1,55 @@
-<h1>Login</h1>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+
+<div class="d-flex justify-content-center ">
+  <div class="col-12 col-md-4 col-lg-4 section-margin-100-100 boxPagina" style="padding: 3px 60px 3px;">
+    <!-- ##### Contact Form Area Start ##### -->
+    <div class="contact-area justify-items-center ">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 p-2">
+                    <div class="section-heading text-center" >
+                        <h1>Entrar</h1>
+                    </div>
+                </div>
+            </div>
+            {% include 'partials/_alertas.html' %}
+            <div class="row">
+                <div class="col-12 p-1">
+                    <div class="contact-form-area">
+                        <form action="{% url 'login' %}" method="POST">
+                            {% csrf_token %}
+                            <div class="row">
+                                <div class="col-12 col-lg-12">
+                                <label for="email"><b>Email</b></label>
+                                    <input type="text" id="email" class="form-control" name="email" placeholder="Entre com o email cadastrado">
+                                </div>
+                                    <div class="col-12 col-lg-12" style="margin-top: 3px;">
+                                    <label for="senha"><b>Senha</b></label>
+                                    <input id="senha" type="password" class="form-control" name="senha" placeholder="Digite aqui sua senha">
+                                </div>
+                                <div class=" d-grid gap-2 pt-3 pb-3" >
+                                    <button class="btnLoginVs margin-top" type="submit">Entrar</button>
+                                    <button class="btnLogin" type="button"  style="margin-top: 3px;" onclick="exibirCriarConta()"><b>Criar Conta</b></button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+    function exibirCriarConta()
+    {
+        location.href = "{% url 'cadastrar_usuario' %}";
+    }
+    </script>
+  </div>
+</div>
+
+
+
+{% endblock %}
