--- a/templates/pessoais/editar_despesa.html
+++ b/templates/pessoais/editar_despesa.html
@@ -2,76 +2,15 @@
 {% load static %}
 {% block content %}
 
-
-<div class="contact-area section-padding">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <div class="section-heading">
-          <h3>Editar Despesa de {{ user.username }} </h3>
-        </div>
-      </div>
-    </div>
-    {% include 'partials/_alertas.html' %}
-    <div class="row">
-      <div class="col-12">
-        <div class="contact-form-area">
-          <form action="{% url 'atualizar_despesa' %}" method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <input type="text" id="despesa_id" class="form_control" name="despesa_id" value="{{despesa.id}}" hidden>
-            <div class="row">
-              <div class="field-descricao">
-                <label for="descricao"><b>Descricao:</b></label>
-                <input type="text" id="descricao" name="descricao" class="vTextField" value="{{despesa.descricao}}" maxlength="100" required>
-              </div>
-              <div class="field-categoria">
-                <label for="file"><b>Categoria:</b></label>
-                <select name="categoria">
-                <option value="{{despesa.categoria}}">{{despesa.categoria}}</option>
-                <option value="alimentacao">Alimentação</option>
-                <option value="moradia">Moradia</option>
-                <option value="transporte">Transporte</option>
-                <option value="saude">Saúde</option>
-                <option value="educacao">Educação</option>
-                <option value="lazer">Lazer</option>
-                <option value="extra">Extra</option>
-                </select>
-              </div>
-              <div class="field-valor">
-                <label for="file"><b>Valor:</b></label>
-                <input type="decimal" name="valor" class="vTextField" value="{{despesa.valor}}" required>
-              </div>
-              <div class="field-forma">
-                <label for="file"><b>Forma:</b></label>
-                <select name="forma">
-                <option value="{{despesa.forma}}">{{despesa.forma}}</option>
-                <option value="debito">Débito</option>
-                <option value="credito">Crédito</option>
-                <option value="dinheiro">Dinheiro</option>
-                <option value="pix">Pix</option>
-                <option value="transferencia">Transferência</option>
-                <option value="outras">Outras</option>
-                </select>
-              </div>
-              <div class="field-data">
-                <label for="file"><b>Data:</b></label>
-                <input type="text" name="data"  value="{{despesa.data}}" class="vDateField" size="10" id="data"><span class="datetimeshortcuts">&nbsp;<a href="#">Hoje</a>&nbsp;|&nbsp;<a href="#" id="calendarlink0"><span class="date-icon" title="Escolha uma data"></span></a></span><input type="hidden" name="initial-data" value="2022-12-02" id="initial-data">
-                <input type="hidden" name="initial-data" value="2022-12-14" id="initial-id_data">
-              </div>
-                <!--      <div class="field-pago">
-                        <div class="checkbox-row">
-                        <input type="checkbox" name="pago" id="id_pago" checked><label class="vCheckboxLabel" for="id_pago">Pago</label>
-                        </div>
-                    </div>
-                -->
-              <div class="submit-row">
-                <button type="submit" class="btnPessoal">Atualizar</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
+{% include 'partials/_alertas.html' %}
+<div class="d-flex justify-content-center">
+  <div class="col-12 col-md-4 col-lg-4 section-margin-100-100 boxPagina">
+    <h3 style="color:royalblue;" class="text-center"><strong>Editar Despesa</strong></h3>
+    <form action="{% url 'atualizar_despesa' %}" method="post">
+      {% csrf_token %}
+      {{formD.as_p}}
+      <button class="btnDespesa text-center" type="submit">ATUALIZAR</button>
+    </form>
   </div>
 </div>
 
